--- a/socreport.bib
+++ b/socreport.bib
@@ -689,6 +689,18 @@
   publisher       = {Prentice Hall}
 }
 
+@article{fitzhugh1955mathematical,
+  title           = {Mathematical models of threshold phenomena in the nerve
+                  membrane},
+  author          = {FitzHugh, Richard},
+  journal         = {The bulletin of mathematical biophysics},
+  volume          = 17,
+  number          = 4,
+  pages           = {257--278},
+  year            = 1955,
+  publisher       = {Springer}
+}
+
 @article{florian07_reinf_learn_throug_modul_spike,
   author          = {Răzvan V. Florian},
   title           = {Reinforcement Learning Through Modulation of
@@ -762,6 +774,18 @@
   publisher       = {MIT Press}
 }
 
+@article{hodgkin1952quantitative,
+  title           = {A quantitative description of membrane current and its
+                  application to conduction and excitation in nerve},
+  author          = {Hodgkin, Alan L and Huxley, Andrew F},
+  journal         = {The Journal of physiology},
+  volume          = 117,
+  number          = 4,
+  pages           = {500--544},
+  year            = 1952,
+  publisher       = {Wiley Online Library}
+}
+
 @article{ivanov19_moder_deep_reinf_learn_algor,
   author          = {Ivanov, Sergey and D'yakonov, Alexander},
   title           = {Modern Deep Reinforcement Learning Algorithms},
@@ -778,6 +802,28 @@
   archivePrefix   = {arXiv},
   eprint          = {1906.10025},
   primaryClass    = {cs.LG},
+}
+
+@article{izhikevich2003simple,
+  title           = {Simple model of spiking neurons},
+  author          = {Izhikevich, Eugene M},
+  journal         = {IEEE Transactions on neural networks},
+  volume          = 14,
+  number          = 6,
+  pages           = {1569--1572},
+  year            = 2003,
+  publisher       = {IEEE}
+}
+
+@article{izhikevich2004model,
+  title           = {Which model to use for cortical spiking neurons?},
+  author          = {Izhikevich, Eugene M},
+  journal         = {IEEE transactions on neural networks},
+  volume          = 15,
+  number          = 5,
+  pages           = {1063--1070},
+  year            = 2004,
+  publisher       = {Ieee}
 }
 
 @InProceedings{ klaus_greff-proc-scipy-2017,
@@ -867,6 +913,19 @@
   pages           = {12--19},
   year            = 2016,
   organization    = {Springer}
+}
+
+@article{morris81_voltag_oscil_barnac_giant_muscl_fiber,
+  author          = {C. Morris and H. Lecar},
+  title           = {Voltage Oscillations in the Barnacle Giant Muscle Fiber},
+  journal         = {Biophysical Journal},
+  volume          = 35,
+  number          = 1,
+  pages           = {193-213},
+  year            = 1981,
+  doi             = {10.1016/s0006-3495(81)84782-0},
+  url             = {https://doi.org/10.1016/s0006-3495(81)84782-0},
+  DATE_ADDED      = {Sat Mar 21 17:35:05 2020},
 }
 
 @article{neftci19_surrog_gradien_learn_spikin_neural_networ,
@@ -998,6 +1057,19 @@
   journal         = {ESANN}
 }
 
+article{urbanczik09_gradien_learn_rule_tempot,
+  author          = {Robert Urbanczik and Walter Senn},
+  title           = {A Gradient Learning Rule for the Tempotron},
+  journal         = {Neural Computation},
+  volume          = 21,
+  number          = 2,
+  pages           = {340-352},
+  year            = 2009,
+  doi             = {10.1162/neco.2008.09-07-605},
+  url             = {https://doi.org/10.1162/neco.2008.09-07-605},
+  DATE_ADDED      = {Fri Nov 1 16:00:33 2019},
+}
+
 @article{stemmler1996single,
   title           = {A single spike suffices: the simplest form of stochastic
                   resonance in model neurons},
@@ -1024,6 +1096,16 @@
   DATE_ADDED      = {Sat Nov 2 19:32:20 2019},
 }
 
+@online{tds_artif_biolog_neural_networ,
+  author          = {Richard Nagyfi},
+  title           = {The differences between Artificial and Biological Neural
+                  Networks},
+  url             =
+                  {https://towardsdatascience.com/the-differences-between-artificial-and-biological-neural-networks-a8b46db828b7},
+  urldate         = {Online; accessed 21 March 2020},
+  year            = 2018,
+}
+
 @article{thorpe2001spike,
   title           = {Spike-based strategies for rapid processing},
   author          = {Thorpe, Simon and Delorme, Arnaud and Van Rullen, Rufin},
@@ -1044,17 +1126,4 @@
   volume          = 10,
   journal         = {Frontiers in Neuroscience},
   doi             = {10.3389/fnins.2016.00508}
-}
-
-@article{urbanczik09_gradien_learn_rule_tempot,
-  author          = {Robert Urbanczik and Walter Senn},
-  title           = {A Gradient Learning Rule for the Tempotron},
-  journal         = {Neural Computation},
-  volume          = 21,
-  number          = 2,
-  pages           = {340-352},
-  year            = 2009,
-  doi             = {10.1162/neco.2008.09-07-605},
-  url             = {https://doi.org/10.1162/neco.2008.09-07-605},
-  DATE_ADDED      = {Fri Nov 1 16:00:33 2019},
 }
