--- a/macros.tex
+++ b/macros.tex
@@ -1,4 +1,4 @@
-\newcommand{\fixme}[1]{#1}
+\newcommand{\fixme}[1]{{\color{red}FIXME: #1}}
 \newcommand{\DRAFT}{
 \begin{center}
 \textbf{DRAFT! --- \today\ --- DRAFT!}
